# elsdpp

./: CMakeLists.txt  README.txt  elsd  elsd.c  elsd.h  makefile  process_curve.c
include/: elsdetector.hpp  elsdpgmfilereader.hpp  elsdshapes.hpp  elsdsvgwriter.hpp  imageinterface.hpp  shapesdetectorinterface.hpp  svgwriter.hpp  svgwriterinterface.hpp
src/: CMakeLists.txt  elsd.c  elsd.h  elsdetector.cpp  elsdpgmfilereader.cpp  elsdsvgwriter.cpp  main.c  main.cpp  process_curve.c  process_curve.h  svgwriter.cpp
test/: CMakeLists.txt  elsdetector_test.cpp
